Fix: Video generation preview window too small https://github.com/Kompakkt/Repo/issues/187

--- a/src/app/components/entity-feature-settings/entity-feature-settings.component.scss
+++ b/src/app/components/entity-feature-settings/entity-feature-settings.component.scss
@@ -68,6 +68,27 @@ div.video-preview-generation-overlay {
     align-items: stretch;
     gap: var(--gap);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
+
+    @media (max-height: 600px) {
+      display: grid;
+      width: auto;
+      grid-template-columns: min(360px, 30vw) min(360px, 30vw);
+      grid-column-gap: calc(2 * var(--gap));
+      padding: 32px;
+
+      > :not(div.video-container) {
+        grid-column: 2;
+      }
+
+      > div.video-container {
+        grid-column: 1;
+        grid-row: 1 / span 4;
+        height: 100%;
+        margin: 0;
+        width: min(360px, 30vw);
+        max-width: 360px;
+      }
+    }
   }
 
   h2 {
@@ -77,16 +98,18 @@ div.video-preview-generation-overlay {
   div.video-container {
     display: flex;
     border-radius: 8px;
-    width: 480px;
-    height: 300px;
+    max-width: 480px;
+    width: 100%;
+    height: min(300px, 30vh);
     overflow: hidden;
     margin: calc(2 * var(--gap)) auto;
     background-color: black;
 
     video.video-preview {
       display: block;
-      width: 480px;
-      height: 300px;
+      max-width: inherit;
+      width: inherit;
+      height: inherit;
       object-fit: contain;
       mix-blend-mode: difference;
 
@@ -109,7 +132,7 @@ div.video-preview-generation-overlay {
   div.progress-container {
     --width: 0;
     --bg-color: var(--color-bg-solid);
-    width: 480px;
+    width: min(480px, 100%);
     height: 12px;
     border-radius: 16px;
     background-color: var(--bg-color);
